KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -17,7 +17,8 @@
 5.  **ราคาคำนวณ (Computed Value)**  หมายถึง ราคาที่กำหนดขึ้นจากต้นทุนการผลิตของสินค้าที่นำเข้า บวกกับกำไรและค่าใช้จ่ายทั่วไปที่รวมอยู่ตามปกติในการขายจากประเทศส่งออกมายังประเทศไทย รวมทั้งค่าภาชนะบรรจุ ค่าประกันภัย และค่าขนส่ง.
     
 6.  **ราคาย้อนกลับ (Fall Back Value)**  หมายถึง การกำหนดราคาโดยนำหลักเกณฑ์ วิธีการและเงื่อนไขในการกำหนดราคาตามวิธีที่ 1-5 มาใช้โดยผ่อนปรนเพื่อการกำหนดราคาอย่างสมเหตุสมผล  
-    การกำหนดราคาศุลกากรจะกำหนดตามวิธีที่ 1 วิธีที่ 2 และวิธีที่ 3 ตามลำดับ หากไม่อาจกำหนดราคาศุลกากรตามวิธีดังกล่าวได้ ให้กำหนดราคาศุลกากรตามวิธีที่ 4 หรือเมื่อยังไม่อาจกำหนดตามวิธีที่ 4 ได้อีก จะกำหนดราคาศุลกากรตามวิธีที่ 5 และวิธีที่ 6 ตามลำดับ อย่างไรก็ตาม ผู้นำเข้าสามารถขอให้กรมศุลกากรสลับลำดับการใช้วิธีที่ 5 และวิธีที่ 4 ได้หากหน่วยงานประเมินอากรเห็นชอบตามคำร้องของผู้นำเข้า
+
+การกำหนดราคาศุลกากรจะกำหนดตามวิธีที่ 1 วิธีที่ 2 และวิธีที่ 3 ตามลำดับ หากไม่อาจกำหนดราคาศุลกากรตามวิธีดังกล่าวได้ ให้กำหนดราคาศุลกากรตามวิธีที่ 4 หรือเมื่อยังไม่อาจกำหนดตามวิธีที่ 4 ได้อีก จะกำหนดราคาศุลกากรตามวิธีที่ 5 และวิธีที่ 6 ตามลำดับ อย่างไรก็ตาม ผู้นำเข้าสามารถขอให้กรมศุลกากรสลับลำดับการใช้วิธีที่ 5 และวิธีที่ 4 ได้หากหน่วยงานประเมินอากรเห็นชอบตามคำร้องของผู้นำเข้า
     
 
 ### วิธีที่ 1 ราคาซื้อขายของที่นำเข้า (Transaction value)
@@ -29,7 +30,7 @@
     -   รายได้ซึ่งผู้ขายได้รับจากการที่ผู้ซื้อนำของที่นำเข้าไปใช้ หรือขายต่อไม่ว่าโดยทางตรงหรือทางอ้อม
     -   ค่าประกันภัย ค่าขนส่งของที่นำเข้ามายังท่าหรือที่ที่นำของเข้า ค่าขนของลง ค่าขนของขึ้นและค่าจัดการต่างๆ ที่เกี่ยวเนื่องกับการขนส่งของที่นำเข้ามายังท่าหรือที่ที่นำของเข้า
     -   ค่าใช้จ่ายหรือมูลค่าที่ผู้ซื้อเป็นผู้รับภาระตามรายการ ดังต่อไปนี้  
-        – ค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนและนายหน้า แต่ไม่รวมค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนเนื่องจากการซื้อ  
+	        - ค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนและนายหน้า แต่ไม่รวมค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนเนื่องจากการซื้อ  
         – ค่าภาชนะบรรจุที่ถือเป็นส่วนหนึ่งของของที่นำเข้าตามความมุ่งหมายในการจัดเก็บอากร  
         – ค่าวัสดุและค่าแรงงานในการบรรจุหีบห่อของที่นำเข้า
     -   มูลค่าของวัสดุ อุปกรณ์หรือบริการเพื่อใช้ในการผลิตและการขายเพื่อส่งออกของที่นำเข้า ไม่ว่าโดยทางตรงหรือทางอ้อมที่ผู้ซื้อเป็นผู้จัดหา ดังต่อไปนี้  
@@ -194,7 +195,7 @@
 
 ที่มา :  [กรมศุลกากร](http://www.customs.go.th/content.php?ini_content=customs_valuation_01&ini_menu=menu_customs_value&xleft_menu=menu_customs_value_01&lang=th&left_menu=menu_customs_value)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE1NTU4NDI0OCwxMjU4OTYyODU2LDEyNT
-g5NjI4NTYsLTE0NDk0MDAxNzAsLTcyODU4NDQ3LDk0OTUwMTgx
-Nl19
+eyJoaXN0b3J5IjpbLTcxNjUwMTQwLDEyNTg5NjI4NTYsMTI1OD
+k2Mjg1NiwtMTQ0OTQwMDE3MCwtNzI4NTg0NDcsOTQ5NTAxODE2
+XX0=
 -->
