KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -25,19 +25,21 @@
 
 การกำหนดราคาศุลกากรตามวิธีที่ 1 ราคาซื้อขายของที่นำเข้าจะต้องเป็นราคาที่ได้ชำระจริงหรือที่จะต้องชำระสำหรับของที่นำเข้าเมื่อได้มีการขายเพื่อส่งออกมายังราชอาณาจักร โดยต้องมีการปรับราคาตามหลักเกณฑ์ดังต่อไปนี้
 
-1.  ค่าใช้จ่ายหรือรายได้ที่ต้องนำมารวมไว้ในราคาซื้อขายของที่นำเข้า  
+ -  ค่าใช้จ่ายหรือรายได้ที่ต้องนำมารวมไว้ในราคาซื้อขายของที่นำเข้า  
     -   ค่าสิทธิและค่าธรรมเนียมใบอนุญาตที่เกี่ยวข้องกับของที่นำเข้า ไม่ว่าโดยทางตรงหรือทางอ้อมอันเป็นเงื่อนไขในการขายของนั้น
     -   รายได้ซึ่งผู้ขายได้รับจากการที่ผู้ซื้อนำของที่นำเข้าไปใช้ หรือขายต่อไม่ว่าโดยทางตรงหรือทางอ้อม
     -   ค่าประกันภัย ค่าขนส่งของที่นำเข้ามายังท่าหรือที่ที่นำของเข้า ค่าขนของลง ค่าขนของขึ้นและค่าจัดการต่างๆ ที่เกี่ยวเนื่องกับการขนส่งของที่นำเข้ามายังท่าหรือที่ที่นำของเข้า
     -   ค่าใช้จ่ายหรือมูลค่าที่ผู้ซื้อเป็นผู้รับภาระตามรายการ ดังต่อไปนี้  
-	        - ค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนและนายหน้า แต่ไม่รวมค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนเนื่องจากการซื้อ  
-        – ค่าภาชนะบรรจุที่ถือเป็นส่วนหนึ่งของของที่นำเข้าตามความมุ่งหมายในการจัดเก็บอากร  
-        – ค่าวัสดุและค่าแรงงานในการบรรจุหีบห่อของที่นำเข้า
+			
+		 - ค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนและนายหน้า แต่ไม่รวมค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนเนื่องจากการซื้อ  
+		 - ค่าภาชนะบรรจุที่ถือเป็นส่วนหนึ่งของของที่นำเข้าตามความมุ่งหมายในการจัดเก็บอากร  
+		 - ค่าวัสดุและค่าแรงงานในการบรรจุหีบห่อของที่นำเข้า
     -   มูลค่าของวัสดุ อุปกรณ์หรือบริการเพื่อใช้ในการผลิตและการขายเพื่อส่งออกของที่นำเข้า ไม่ว่าโดยทางตรงหรือทางอ้อมที่ผู้ซื้อเป็นผู้จัดหา ดังต่อไปนี้  
-        – วัสดุ ส่วนประกอบ ชิ้นส่วนหรือสิ่งอื่นที่คล้ายคลึงกัน ที่รวมอยู่ในของที่นำเข้า  
-        – เครื่องมือ แม่พิมพ์ แบบพิมพ์ หรือสิ่งอื่นที่คล้ายคลึงกัน ที่ใช้ในการผลิตของที่นำเข้า  
-        – วัสดุที่ใช้สิ้นเปลืองไปในการผลิตของที่นำเข้า  
-        – การให้บริการด้านวิศวกรรม พัฒนาการ งานศิลป์ การออกแบบ แบบแปลน และภาพร่างที่กระทำขึ้นนอกราชอาณาจักรและเป็นสิ่งจำเป็นสำหรับการผลิตของที่นำเข้า
+	     -	วัสดุ ส่วนประกอบ ชิ้นส่วนหรือสิ่งอื่นที่คล้ายคลึงกัน ที่รวมอยู่ในของที่นำเข้า  
+	       -	เครื่องมือ แม่พิมพ์ แบบพิมพ์ หรือสิ่งอื่นที่คล้ายคลึงกัน ที่ใช้ในการผลิตของที่นำเข้า  
+		-	วัสดุที่ใช้สิ้นเปลืองไปในการผลิตของที่นำเข้า  
+		-	การให้บริการด้านวิศวกรรม พัฒนาการ งานศิลป์ การออกแบบ แบบแปลน และภาพร่างที่กระทำขึ้นนอกราชอาณาจักรและเป็นสิ่งจำเป็นสำหรับการผลิตของที่นำเข้า.
+		
 2.  ค่าใช้จ่ายที่ต้องนำมาหักออกจากราคาซื้อขายของที่นำเข้าในการกำหนดราคาศุลกากรตามวิธีที่ 1  
     -   ค่าใช้จ่ายในการก่อสร้าง ติดตั้ง ประกอบ บำรุงรักษา หรือการให้ความช่วยเหลือด้านวิชาการที่กระทำขึ้นภายหลังจากการนำเข้าของนั้น
     -   ค่าขนส่งภายหลังจากการนำเข้าสำเร็จแล้ว
@@ -63,7 +65,8 @@
     6.  บุคคลทั้งสองถูกควบคุมโดยบุคคลที่สามไม่ว่าโดยทางตรงหรือทางอ้อม
     7.  บุคคลทั้งสองร่วมกันควบคุมบุคคลที่สามไม่ว่าโดยทางตรงหรือทางอ้อมหรือ
     8.  บุคคลหนึ่งเป็นสมาชิกในครอบครัวเดียวกันกับอีกบุคคลหนึ่ง  
-        บุคคลที่มีอำนาจควบคุมตาม (4) (5) (6) และ (7) หมายถึงบุคคลที่มีอำนาจที่จะยับยั้งหรือสั่งการต่ออีกบุคคลหนึ่งในทางนิตินัยหรือพฤตินัย
+        บุคคลที่มีอำนาจควบคุมตาม (4) (5) (6) และ (7) หมายถึงบุคคลที่มีอำนาจที่จะยับยั้งหรือสั่งการต่ออีกบุคคลหนึ่งในทางนิตินัยหรือพฤตินัย.
+        
 6.  ของนำเข้าดังตัวอย่างต่อไปนี้ ไม่ถือว่าเป็นการขาย และไม่สามารถกำหนดราคาศุลกากรโดยวิธีที่ 1  
     -   ของขวัญ ของตัวอย่าง ของส่งเสริมการขายที่ให้มาโดยไม่คิดราคา
     -   ของฝากขาย
@@ -112,20 +115,22 @@
         -   การขายในระดับการค้าต่างกันและในปริมาณที่ต่างกัน ให้ปรับราคาทั้งด้านระดับการค้าและปริมาณ
         -   ของที่นำเข้า ส่งออกจากประเทศสิงคโปร์ ของที่คล้ายกันส่งออกจากประเทศสหรัฐอเมริกา จะต้องปรับราคาสำหรับความแตกต่างด้านระยะทาง
         -   ของที่นำเข้า ส่งออกจากประเทศสหรัฐอเมริกาด้านตะวันตก ของที่คล้ายกันส่งออกจากประเทศสหรัฐอเมริกาด้านตะวันออก จะต้องปรับราคาสำหรับความแตกต่างด้านระยะทาง
-        -   ของที่นำเข้า ส่งออกจากประเทศญี่ปุ่นโดยทางอากาศยาน ของที่คล้ายกันส่งออกจากประเทศญี่ปุ่นโดยทางเรือ จะต้องปรับราคาสำหรับวิธีขนส่งที่แตกต่างกัน
+        -   ของที่นำเข้า ส่งออกจากประเทศญี่ปุ่นโดยทางอากาศยาน ของที่คล้ายกันส่งออกจากประเทศญี่ปุ่นโดยทางเรือ จะต้องปรับราคาสำหรับวิธีขนส่งที่แตกต่างกัน.
+        
 3.  ถ้าราคาซื้อขายของที่คล้ายกันมีมากกว่าหนึ่งราคา ให้ใช้ราคาซื้อขายของที่คล้ายกันที่มีราคาต่ำสุด ซึ่งผลิตโดยผู้ผลิตรายเดียวกัน และเวลาที่ส่งออก ระดับการค้า ปริมาณ เงื่อนไขในการชำระเงินและการส่งมอบ วิธีการขนส่ง และการดำเนินการอื่นใด ที่เกี่ยวข้องกับการซื้อขายใกล้เคียงกับของที่นำเข้า ตามหลักเกณฑ์ที่อธิบดีประกาศกำหนด
 
 ### วิธีที่ 4 ราคาหักทอน (Deductive Value)
 
-1.  หากไม่อาจกำหนดราคาศุลกากรตามวิธีที่ 1 ราคาซื้อขายของที่นำเข้า วิธีที่ 2 ราคาซื้อขายของที่เหมือนกัน และวิธีที่ 3 ราคาซื้อขายของที่คล้ายกัน กรมศุลกากรจะกำหนดราคาศุลกากรโดยวิธีที่ 4 ราคาหักทอน เว้นแต่ผู้นำเข้าร้องขอต่อพนักงานศุลกากรให้กำหนดราคาศุลกากรโดยใช้ราคาคำนวณก่อนราคาหักทอนและพนักงานศุลกากรเห็นชอบกับคำร้องดังกล่าวแล้ว
-2.  ราคาหักทอนที่ใช้ในการกำหนดราคาศุลกากรสำหรับของที่นำเข้าจะต้องเป็นราคาซื้อขายต่อหน่วยของของที่นำเข้าที่ได้ขายไปในราชอาณาจักรในภาพเดียวกับที่นำเข้า โดยหักค่าใช้จ่าย ดังต่อไปนี้ออก  
+1.  หากไม่อาจกำหนดราคาศุลกากรตามวิธีที่ 1 ราคาซื้อขายของที่นำเข้า วิธีที่ 2 ราคาซื้อขายของที่เหมือนกัน และวิธีที่ 3 ราคาซื้อขายของที่คล้ายกัน กรมศุลกากรจะกำหนดราคาศุลกากรโดยวิธีที่ 4 ราคาหักทอน เว้นแต่ผู้นำเข้าร้องขอต่อพนักงานศุลกากรให้กำหนดราคาศุลกากรโดยใช้ราคาคำนวณก่อนราคาหักทอนและพนักงานศุลกากรเห็นชอบกับคำร้องดังกล่าวแล้ว.
+
+3.  ราคาหักทอนที่ใช้ในการกำหนดราคาศุลกากรสำหรับของที่นำเข้าจะต้องเป็นราคาซื้อขายต่อหน่วยของของที่นำเข้าที่ได้ขายไปในราชอาณาจักรในภาพเดียวกับที่นำเข้า โดยหักค่าใช้จ่าย ดังต่อไปนี้ออก  
     1.  ค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนที่ได้จ่ายหรือตกลงว่าจะจ่าย หรือกำไรและค่าใช้จ่ายทั่วไปตามปกติที่เกี่ยวเนื่องกับการขายของนั้นในราชอาณาจักร อย่างใดอย่างหนึ่ง โดยเทียบเคียงกับของประเภทหรือชนิดเดียวกัน
     2.  ค่าประกัน ภัยค่าขนส่ง และค่าใช้จ่ายต่างๆ ที่เกี่ยวข้องกับการขนส่งของนั้นที่เกิดขึ้นในราชอาณาจักร
     3.  ค่าอากรและภาษีอื่นๆ ที่ต้องชำระในราชอาณาจักร เนื่องจากการนำเข้าหรือการขายของนั้น
-3.  ในกรณีที่ไม่มีราคาซื้อขายต่อหน่วยของของที่นำเข้าตามข้อ 2 ให้ใช้ราคาซื้อขายต่อหน่วยของของที่เหมือนกันหรือของที่คล้ายกัน ตามลำดับ ที่ได้ขายไปในราชอาณาจักรในสภาพเดียวกับที่นำเข้าโดยหักค่าใช้จ่ายตามข้อ 2.1 - 2.3 ออกจากราคาซื้อขายต่อหน่วยของของที่เหมือนกันหรือของที่คล้ายกัน แล้วแต่กรณี
-4.  ราคาซื้อขายต่อหน่วยของของที่นำเข้าตามข้อ 2 หรือของที่เหมือนกันหรือของที่คล้ายกันตามข้อ 3 จะต้องเป็นราคาที่ได้ขายไปในปริมาณรวมที่มากที่สุดในเวลาเดียวกันหรือใกล้เคียงกันกับการนำเข้าของที่นำเข้า ในกรณีที่ไม่มีราคาที่ได้ขายในเวลาดังกล่าว ให้ใช้ราคาที่ได้ขายไปในปริมาณรวมที่มากที่สุดในวันแรกที่ได้มีการขายของที่นำเข้า ของที่เหมือนกัน หรือของที่คล้ายกันดังกล่าว ซึ่งต้องไม่เกิน 90 วันหลังจากการนำเข้าของนั้น
-5.  การใช้ราคาหักทอนตามข้อ 2 - 4 ผู้ซื้อต้องไม่มีความสัมพันธ์กับผู้ขาย และไม่เป็นผู้จัดหาวัสดุ อุปกรณ์หรือบริการซึ่งนำไปใช้ในการผลิตให้แก่ผู้ขายเพื่อส่งออกมายังราชอาณาจักร
-6.  ในกรณีที่ไม่มีการขายของที่นำเข้า ของที่เหมือนกัน หรือของที่คล้ายกันตามข้อ 2 - 4 หากผู้นำของเข้าร้องขอหรือพนักงานศุลกากรเห็นสมควร ให้ใช้ราคาซื้อขายต่อหน่วยของของที่นำเข้าที่ได้นำไปผ่านกรรมวิธีเพิ่มเติม โดยให้หักทอนมูลค่าที่เพิ่มขึ้นจากการนำไปผ่านกรรมวิธีเพิ่มเติมดังกล่าวและค่าใช้จ่ายต่างๆ ตามข้อ 2.1 - 2.3 ออกจากราคาซื้อขายของของนั้น ทั้งนี้ราคาซื้อขายต่อหน่วยของของที่นำเข้าตามข้อนี้จะต้องเป็นราคาที่ได้จากการขายของนั้นไปในปริมาณรวมมากที่สุด โดยผู้ซื้อต้องไม่มีความสัมพันธ์กับผู้ขาย
+4.  ในกรณีที่ไม่มีราคาซื้อขายต่อหน่วยของของที่นำเข้าตามข้อ 2 ให้ใช้ราคาซื้อขายต่อหน่วยของของที่เหมือนกันหรือของที่คล้ายกัน ตามลำดับ ที่ได้ขายไปในราชอาณาจักรในสภาพเดียวกับที่นำเข้าโดยหักค่าใช้จ่ายตามข้อ 2.1 - 2.3 ออกจากราคาซื้อขายต่อหน่วยของของที่เหมือนกันหรือของที่คล้ายกัน แล้วแต่กรณี
+5.  ราคาซื้อขายต่อหน่วยของของที่นำเข้าตามข้อ 2 หรือของที่เหมือนกันหรือของที่คล้ายกันตามข้อ 3 จะต้องเป็นราคาที่ได้ขายไปในปริมาณรวมที่มากที่สุดในเวลาเดียวกันหรือใกล้เคียงกันกับการนำเข้าของที่นำเข้า ในกรณีที่ไม่มีราคาที่ได้ขายในเวลาดังกล่าว ให้ใช้ราคาที่ได้ขายไปในปริมาณรวมที่มากที่สุดในวันแรกที่ได้มีการขายของที่นำเข้า ของที่เหมือนกัน หรือของที่คล้ายกันดังกล่าว ซึ่งต้องไม่เกิน 90 วันหลังจากการนำเข้าของนั้น
+6.  การใช้ราคาหักทอนตามข้อ 2 - 4 ผู้ซื้อต้องไม่มีความสัมพันธ์กับผู้ขาย และไม่เป็นผู้จัดหาวัสดุ อุปกรณ์หรือบริการซึ่งนำไปใช้ในการผลิตให้แก่ผู้ขายเพื่อส่งออกมายังราชอาณาจักร
+7.  ในกรณีที่ไม่มีการขายของที่นำเข้า ของที่เหมือนกัน หรือของที่คล้ายกันตามข้อ 2 - 4 หากผู้นำของเข้าร้องขอหรือพนักงานศุลกากรเห็นสมควร ให้ใช้ราคาซื้อขายต่อหน่วยของของที่นำเข้าที่ได้นำไปผ่านกรรมวิธีเพิ่มเติม โดยให้หักทอนมูลค่าที่เพิ่มขึ้นจากการนำไปผ่านกรรมวิธีเพิ่มเติมดังกล่าวและค่าใช้จ่ายต่างๆ ตามข้อ 2.1 - 2.3 ออกจากราคาซื้อขายของของนั้น ทั้งนี้ราคาซื้อขายต่อหน่วยของของที่นำเข้าตามข้อนี้จะต้องเป็นราคาที่ได้จากการขายของนั้นไปในปริมาณรวมมากที่สุด โดยผู้ซื้อต้องไม่มีความสัมพันธ์กับผู้ขาย
 
 ### วิธีที่ 5 ราคาคำนวณ (Computed Value)
 
@@ -195,7 +200,7 @@
 
 ที่มา :  [กรมศุลกากร](http://www.customs.go.th/content.php?ini_content=customs_valuation_01&ini_menu=menu_customs_value&xleft_menu=menu_customs_value_01&lang=th&left_menu=menu_customs_value)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcxNjUwMTQwLDEyNTg5NjI4NTYsMTI1OD
+eyJoaXN0b3J5IjpbOTI5MTY5Njc1LDEyNTg5NjI4NTYsMTI1OD
 k2Mjg1NiwtMTQ0OTQwMDE3MCwtNzI4NTg0NDcsOTQ5NTAxODE2
 XX0=
 -->
