KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -150,8 +150,9 @@
 
 ### วิธีที่ 6 ราคาย้อนกลับ (Fall Back Value)
 
-1.  หากไม่อาจกำหนดราคาศุลกากรตามวิธีที่ 1 วิธีที่ 2 วิธีที่ 3 วิธีที่ 4 และวิธีที่ 5 ได้ให้กำหนดราคาศุลกากรโดยวิธีที่ 6 ราคาย้อนกลับ โดยมีหลักเกณฑ์ในการกำหนดราคา ดังนี้
-2.  กำหนดราคาศุลกากรตามวิธีที่ 6 ราคาย้อนกลับ มีหลักเกณฑ์ในการปฏิบัติ ดังนี้  
+1.  หากไม่อาจกำหนดราคาศุลกากรตามวิธีที่ 1 วิธีที่ 2 วิธีที่ 3 วิธีที่ 4 และวิธีที่ 5 ได้ให้กำหนดราคาศุลกากรโดยวิธีที่ 6 ราคาย้อนกลับ โดยมีหลักเกณฑ์ในการกำหนดราคา ดังนี้.
+
+3.  กำหนดราคาศุลกากรตามวิธีที่ 6 ราคาย้อนกลับ มีหลักเกณฑ์ในการปฏิบัติ ดังนี้  
     1.  กรมศุลกากรจะพิจารณาราคาจากราคาศุลกากรที่เคยรับไว้แล้วก่อนหน้านี้
     2.  กำหนดราคาของนำเข้าโดยใช้วิธีที่ 1 ถึงวิธีที่ 5 อย่างผ่อนปรนและสมเหตุสมผล
     3.  กรณีที่ไม่สามารถกำหนดราคาศุลกากรตามข้อ 2.2 อาจกำหนดโดยวิธีอื่นที่สมเหตุสมผล โดยที่วิธีการดังกล่าวจะต้องไม่เป็นข้อห้ามของวิธีย้อนกลับและจะต้องสอดคล้องกับหลักการที่บัญญัติไว้ในความตกลงว่าด้วยการนำมาตรา 7 ของความตกลงทั่วไปว่าด้วยภาษีศุลกากรและการค้า 1994 มาถือปฏิบัติ และมาตรา 7 ของความตกลงทั่วไปว่าด้วยภาษีศุลกากรและการค้า 1994
@@ -163,7 +164,7 @@
         -   โครงสร้างของราคาซึ่งประกอบด้วย วัตถุดิบ หรือส่วนประกอบรวมกำไรและค่าใช้จ่าย
         -   มูลค่าที่เท่าเทียมกับมูลค่าอันแท้จริงของของที่นำเข้าที่มีอยู่ หรือสามารถสืบค้นได้
         -   ราคาที่กำหนดโดยผู้เชี่ยวชาญ ผู้ชำนาญการ หรือคณะกรรมการ
-3.  การกำหนดราคาศุลกากรตามวิธีราคาย้อนกลับ กรมศุลกากรจะไม่กำหนดโดยใช้รายการ ดังต่อไปนี้  
+4.  การกำหนดราคาศุลกากรตามวิธีราคาย้อนกลับ กรมศุลกากรจะไม่กำหนดโดยใช้รายการ ดังต่อไปนี้  
     -   ราคาขายของของที่ผลิตและขายในราชอาณาจักร
     -   ระบบราคาที่กำหนดให้รับราคาสูงกว่าจากสองราคาที่ให้เลือก
     -   ราคาของของที่ขายในตลาดภายในประเทศที่ส่งออกของที่จะกำหนดราคาศุลกากร
@@ -200,7 +201,7 @@
 
 ที่มา :  [กรมศุลกากร](http://www.customs.go.th/content.php?ini_content=customs_valuation_01&ini_menu=menu_customs_value&xleft_menu=menu_customs_value_01&lang=th&left_menu=menu_customs_value)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTI5MTY5Njc1LDEyNTg5NjI4NTYsMTI1OD
+eyJoaXN0b3J5IjpbMzkxMzQwODgzLDEyNTg5NjI4NTYsMTI1OD
 k2Mjg1NiwtMTQ0OTQwMDE3MCwtNzI4NTg0NDcsOTQ5NTAxODE2
 XX0=
 -->
