KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -173,7 +173,7 @@
     -   ราคาศุลกากรขั้นต่ำ หรือ
     -   ราคาที่กำหนดขึ้นเองหรือที่ไม่เป็นจริง
 
-### ข้อควรทราบในการสำแดงราคาศุลกากร
+### ==ข้อควรทราบในการสำแดงราคาศุลกากร==
 
 ผู้นำเข้าควรตรวจสอบว่า ราคาสินค้านำเข้าที่ท่านสำแดงต่อศุลกากรเป็นไปที่กำหนดไว้ในระบบราคาแกตต์หรือไม่ โดยตอบคำถามแนวทางการประเมินราคาแกตต์สำหรับผู้นำเข้า (การตรวจสอบว่าราคาสินค้าว่าเป็นไปตามราคาแกตต์หรือไม่) ดังต่อไปนี้
 
@@ -201,7 +201,7 @@
 
 ที่มา :  [กรมศุลกากร](http://www.customs.go.th/content.php?ini_content=customs_valuation_01&ini_menu=menu_customs_value&xleft_menu=menu_customs_value_01&lang=th&left_menu=menu_customs_value)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzkxMzQwODgzLDEyNTg5NjI4NTYsMTI1OD
+eyJoaXN0b3J5IjpbNTg1MjI0NjU5LDEyNTg5NjI4NTYsMTI1OD
 k2Mjg1NiwtMTQ0OTQwMDE3MCwtNzI4NTg0NDcsOTQ5NTAxODE2
 XX0=
 -->
